code/typescript/AxiomaEquityOptimizer/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Axioma Equity Optimizer client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-axiomaequityoptimizer)](https://www.npmjs.com/package/@factset/sdk-axiomaequityoptimizer)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Engines Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1
- SDK version: 0.9.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-axiomaequityoptimizer@0.9.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-axiomaequityoptimizer@0.9.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, OptimizationsApi } = require('@factset/sdk-axiomaequityoptimizer');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new OptimizationsApi();
const id = "id_example"; // String | from url, provided from the location header in the Run Optimization endpoint

// Call api endpoint
apiInstance.cancelAxiomaOptimizationById(id).then(
  () => {
    console.log('API called successfully.');
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-axiomaequityoptimizer');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*axiomaequityoptimizer.OptimizationsApi* | [**cancelAxiomaOptimizationById**](docs/OptimizationsApi.md#cancelAxiomaOptimizationById) | **DELETE** /analytics/engines/axp/v1/optimizations/{id} | Cancel Axioma optimization by id
*axiomaequityoptimizer.OptimizationsApi* | [**getAxiomaOptimizationById**](docs/OptimizationsApi.md#getAxiomaOptimizationById) | **GET** /analytics/engines/axp/v1/optimizations/{id} | Get Axioma optimization by id
*axiomaequityoptimizer.OptimizationsApi* | [**runAxiomaOptimization**](docs/OptimizationsApi.md#runAxiomaOptimization) | **POST** /analytics/engines/axp/v1/optimizations | Run Axioma optimization
*axiomaequityoptimizer.StrategyDocumentsApi* | [**getAxiomaEquityStrategyDocuments**](docs/StrategyDocumentsApi.md#getAxiomaEquityStrategyDocuments) | **GET** /analytics/engines/axp/v1/strategies/{path} | Get Axioma Equity strategy documents and sub-directories in a directory


## Documentation for Models

 - [axiomaequityoptimizer.AxiomaEquityOptimizationParameters](docs/AxiomaEquityOptimizationParameters.md)
 - [axiomaequityoptimizer.DocumentDirectories](docs/DocumentDirectories.md)
 - [axiomaequityoptimizer.OptimalPortfolio](docs/OptimalPortfolio.md)
 - [axiomaequityoptimizer.Optimization](docs/Optimization.md)
 - [axiomaequityoptimizer.OptimizerAccount](docs/OptimizerAccount.md)
 - [axiomaequityoptimizer.OptimizerAccountOverrides](docs/OptimizerAccountOverrides.md)
 - [axiomaequityoptimizer.OptimizerOptimalHoldings](docs/OptimizerOptimalHoldings.md)
 - [axiomaequityoptimizer.OptimizerOutputTypes](docs/OptimizerOutputTypes.md)
 - [axiomaequityoptimizer.OptimizerStrategy](docs/OptimizerStrategy.md)
 - [axiomaequityoptimizer.OptimizerStrategyOverrides](docs/OptimizerStrategyOverrides.md)
 - [axiomaequityoptimizer.OptimizerTradesList](docs/OptimizerTradesList.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
