code/typescript/AxiomaEquityOptimizer/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Axioma Equity Optimizer client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-axiomaequityoptimizer)](https://www.npmjs.com/package/@factset/sdk-axiomaequityoptimizer)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3
- SDK version: 0.22.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-axiomaequityoptimizer@0.22.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-axiomaequityoptimizer@0.22.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AXPOptimizerApi } = require('@factset/sdk-axiomaequityoptimizer');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AXPOptimizerApi();
const id = "id_example"; // String | from url, provided from the location header in the Create and Run Axioma optimization endpoint

// Call api endpoint
apiInstance.cancelOptimizationById(id).then(
  () => {
    console.log('API called successfully.');
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-axiomaequityoptimizer');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*axiomaequityoptimizer.AXPOptimizerApi* | [**cancelOptimizationById**](docs/AXPOptimizerApi.md#cancelOptimizationById) | **DELETE** /analytics/engines/axp/v3/optimizations/{id} | Cancel Axioma optimization by id
*axiomaequityoptimizer.AXPOptimizerApi* | [**getOptimizationParameters**](docs/AXPOptimizerApi.md#getOptimizationParameters) | **GET** /analytics/engines/axp/v3/optimizations/{id} | Get Axioma optimization parameters by id
*axiomaequityoptimizer.AXPOptimizerApi* | [**getOptimizationResult**](docs/AXPOptimizerApi.md#getOptimizationResult) | **GET** /analytics/engines/axp/v3/optimizations/{id}/result | Get Axioma optimization result by id
*axiomaequityoptimizer.AXPOptimizerApi* | [**getOptimizationStatusById**](docs/AXPOptimizerApi.md#getOptimizationStatusById) | **GET** /analytics/engines/axp/v3/optimizations/{id}/status | Get Axioma optimization status by id
*axiomaequityoptimizer.AXPOptimizerApi* | [**postAndOptimize**](docs/AXPOptimizerApi.md#postAndOptimize) | **POST** /analytics/engines/axp/v3/optimizations | Create and Run Axioma optimization
*axiomaequityoptimizer.AXPOptimizerApi* | [**putAndOptimize**](docs/AXPOptimizerApi.md#putAndOptimize) | **PUT** /analytics/engines/axp/v3/optimizations/{id} | Create or Update Axioma optimization and run it.
*axiomaequityoptimizer.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*axiomaequityoptimizer.CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*axiomaequityoptimizer.StrategyDocumentsApi* | [**getAxiomaEquityStrategyDocuments**](docs/StrategyDocumentsApi.md#getAxiomaEquityStrategyDocuments) | **GET** /analytics/engines/axp/v3/strategies/{path} | Get Axioma Equity strategy documents and sub-directories in a directory


## Documentation for Models

 - [axiomaequityoptimizer.AccountDirectories](docs/AccountDirectories.md)
 - [axiomaequityoptimizer.AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [axiomaequityoptimizer.AxiomaEquityOptimizationParameters](docs/AxiomaEquityOptimizationParameters.md)
 - [axiomaequityoptimizer.AxiomaEquityOptimizationParametersRoot](docs/AxiomaEquityOptimizationParametersRoot.md)
 - [axiomaequityoptimizer.CalculationInfo](docs/CalculationInfo.md)
 - [axiomaequityoptimizer.CalculationInfoRoot](docs/CalculationInfoRoot.md)
 - [axiomaequityoptimizer.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [axiomaequityoptimizer.Currency](docs/Currency.md)
 - [axiomaequityoptimizer.CurrencyRoot](docs/CurrencyRoot.md)
 - [axiomaequityoptimizer.DocumentDirectories](docs/DocumentDirectories.md)
 - [axiomaequityoptimizer.DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [axiomaequityoptimizer.Error](docs/Error.md)
 - [axiomaequityoptimizer.ErrorSource](docs/ErrorSource.md)
 - [axiomaequityoptimizer.ObjectRoot](docs/ObjectRoot.md)
 - [axiomaequityoptimizer.OptimalPortfolio](docs/OptimalPortfolio.md)
 - [axiomaequityoptimizer.Optimization](docs/Optimization.md)
 - [axiomaequityoptimizer.OptimizerAccount](docs/OptimizerAccount.md)
 - [axiomaequityoptimizer.OptimizerAccountOverrides](docs/OptimizerAccountOverrides.md)
 - [axiomaequityoptimizer.OptimizerOptimalHoldings](docs/OptimizerOptimalHoldings.md)
 - [axiomaequityoptimizer.OptimizerOutputTypes](docs/OptimizerOutputTypes.md)
 - [axiomaequityoptimizer.OptimizerStrategy](docs/OptimizerStrategy.md)
 - [axiomaequityoptimizer.OptimizerStrategyOverrides](docs/OptimizerStrategyOverrides.md)
 - [axiomaequityoptimizer.OptimizerTradesList](docs/OptimizerTradesList.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
